[gd_scene load_steps=10 format=2]

[ext_resource path="res://2. SFX/PEW.wav" type="AudioStream" id=1]
[ext_resource path="res://1. GFX/Kenney/PNG/Default/effect_yellow.png" type="Texture" id=2]
[ext_resource path="res://4. Scenes/Objects/LaserBullet.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.30575
height = 25.7623

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -95.4339, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="Curve" id=4]
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 50, 500, 0 )
initial_velocity = 2500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 48.62
color = Color( 0.772549, 0.745098, 0, 0.843137 )
hue_variation = 1.0
anim_speed_curve = SubResource( 5 )

[node name="LaserBullet" type="RigidBody2D"]
process_priority = 1
collision_layer = 8
collision_mask = 7
gravity_scale = 0.0
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 0.376453, 0.48223 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.56796
shape = SubResource( 1 )

[node name="despawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Expand beam" = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
pitch_scale = 2.9

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 15.3622, 0 )
scale = Vector2( 0.073, 0.042 )
emitting = false
amount = 96
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )

[node name="despawnTimer2" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_LaserBullet_body_entered"]
[connection signal="timeout" from="despawnTimer" to="." method="_on_despawnTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
